--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,28 @@
+
+# 실행하려는 컨테이너들의 묶음
 services:
+  # 'api'라는 이름의 서비스 (FastAPI 서버)
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: your-docker-id/pipeline-api:latest # 본인의 Docker Hub ID로 변경
+    # 현재 폴더의 Dockerfile을 사용하여 이미지를 빌드
+    image: your-docker-id/eagle_eye_pipeline:1.0
+
+    # 컨테이너의 이름을 'my-pipeline-container'로 고정
+    container_name: eagle_eye_pipeline_container
+    platform: linux/amd64  # <--- 이 줄을 추가합니다!
+
+    # 포트 연결: 내 컴퓨터의 8000번 포트 <-> 컨테이너의 8000번 포트
     ports:
       - "8000:8000"
+      
+    # 환경 변수 파일 주입: API 키 등의 비밀 정보를 컨테이너에 전달
     env_file:
       - .config.env
+      
+    # 볼륨(폴더) 연결: 컨테이너가 삭제되어도 데이터를 보존하기 위함
     volumes:
-      - ./data:/app/data
-      - ./results:/app/results
+      - ./data:/app/data          # 점수 산정용 데이터 폴더 연결
+      - ./results:/app/results      # 개별 크롤링 결과 저장 폴더 연결
+      - ./total:/app/total        # 통합 마스터 파일 저장 폴더 연결
+      
+    # 재시작 정책: 사용자가 직접 중지시키지 않는 한, 에러 발생 시 자동으로 재시작
     restart: unless-stopped
